2001-10-08  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in: Rewrite in Perl.
	* configure.ac: Adjust.
	* lib/Autom4te/General.pm (&up_to_date_p): New.
	* bin/autom4te.in (&up_to_date_p): Use it.
	Rename as...
	(&up_to_date): this.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (m4_case, m4_bmatch, m4_normalize)
	(m4_list_cmp): Use $0 to reinvoke yourself.
	(m4_patsubsts): New.
	(m4_strip, m4_version_unletter): Use it.
	* tests/atspecific.m4 (AT_DATA_M4SUGAR, AT_DATA_M4SH): Likewise.

	
2001-10-08  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autoconf.m4, lib/autoconf/general.m4,
	* lib/autoconf/libs.m4, lib/autoconf/status.m4,
	* lib/autoconf/types.m4, lib/autotest/general.m4,
	* lib/m4sugar/m4sh.m4, lib/m4sugar/m4sugar.m4, tests/atspecific.m4,
	* tests/torture.at: Rename m4_regexp, m4_patsubst, and m4_match to
	m4_bregexp, m4_bpatsubst, and m4_bmatch.
	* doc/autoconf.texi (Redefined M4 Macros): Adjust.

	
2001-10-08  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4: Use AS_REQUIRE.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (AS_DIRNAME_EXPR): Use AS_REQUIRE.
	* tests/tools.at (AT_DATA_FORBIDDEN): Rename/move/duplicate to...
	* tests/atspecific.m4 (AT_DATA_M4SUGAR, AT_DATA_M4SH): here.
	* tests/tools.at, tests/m4sh.at: Use it.
	* tests/m4sh.at: Don't rely on Autoconf macros.
	(DIRNAME_TEST): Also exercise the expr variant.
	* tests/m4sugar.at, tests/atspecific.m4 (AT_CHECK_M4SUGAR): The
	preferred M4sugar extension is now `.4s'.
	* tests/README: Remove.

2001-10-08  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (m4_provide_ifelse): Rename as...
	(m4_provide_if): this.
	* lib/m4sugar/m4sh.m4 (AS_REQUIRE): New.
	* lib/autoconf/general.m4 (AS_DEFUN, AC_DEFUN_ONCE, AC_BEFORE)
	(AC_REQUIRE, AC_PROVIDE, AC_PROVIDE_IFELSE): Be exact copy of the
	M4sugar peer, i.e., drop the `AC_PROVIDE_$1' broken marker.

2001-10-08  Akim Demaille  <akim@epita.fr>
