@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.24.
-.TH AUTOM4TE "1" "September 2001" "GNU Autoconf 2.52e" FSF
+.TH AUTOM4TE "1" "October 2001" "GNU Autoconf 2.52e" FSF
 .SH NAME
 autom4te \- Generate files and scripts thanks to M4
 .SH SYNOPSIS
