@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.24.
-.TH AUTORECONF "1" "September 2001" "GNU Autoconf 2.52e" FSF
+.TH AUTORECONF "1" "October 2001" "GNU Autoconf 2.52e" FSF
 .SH NAME
 autoreconf \- Update generated configuration files
 .SH SYNOPSIS
@@ -51,29 +51,13 @@ this package's Autoconf extensions
 .PP
 Unless specified, heuristics try to compute `M4DIR' from the `Makefile.am',
 or defaults to `m4' if it exists.
-.SS "The following options are passed to `automake':"
-.TP
-\fB\-\-cygnus\fR
-assume program is part of Cygnus-style tree
-.TP
-\fB\-\-foreign\fR
-set strictness to foreign
-.TP
-\fB\-\-gnits\fR
-set strictness to gnits
-.TP
-\fB\-\-gnu\fR
-set strictness to gnu
-.TP
-\fB\-\-include\-deps\fR
-include generated dependencies in Makefile.in
 .PP
 The environment variables AUTOCONF, AUTOHEADER, AUTOMAKE, and ACLOCAL
 are honored.
 .SH AUTHOR
-Written by David J. MacKenzie.
+Written by David J. MacKenzie and Akim Demaille.
 .PP
-Copyright 1994, 1999, 2000 Free Software Foundation, Inc.
+Copyright 1994, 1999, 2000, 2001 Free Software Foundation, Inc.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "REPORTING BUGS"
