@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.24.
-.TH IFNAMES "1" "September 2001" "ifnames " FSF
+.TH IFNAMES "1" "October 2001" "ifnames " FSF
 .SH NAME
 ifnames \- Extract CPP conditionals from a set of files
 .SH SYNOPSIS
